--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -36,16 +37,30 @@
         <span class="angledDoubleDown"><i class="fas fa-angle-double-down"></i></span>
       </span>
     </nav>
-    <header>xx
+    <header>
       <div class="logo">
           <img src="/images/profile-hex.png"> 
       </div>
       <br>
       <div class="name">
-          <h2><strong>Your&nbsp</strong>name</h2>
+          <h2><span class="firstName">Luciana&nbsp</span><span class="lastName">Gallo</span></h2>
       </div>
   </header>    
+
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container">
+      <section class="new-tweet">
+            <form class="compose-tweet" method="POST" action="/tweets" enctype="application/x-www-form-urlencoded" >
+          <label for="tweet-text"></label>
+          <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
+          <div class="buttonCounter">
+          
+            <button type="submit">Tweet</button>
+            
+            <output name="counter" class="counter" for="tweet-text">140</output>
+            </div>
+          </form>
+      </section>
+    </main>
   </body>
 </html>
